Edited the width value of main_container to avoid overflowing.

--- a/scss/style.css
+++ b/scss/style.css
@@ -25,7 +25,7 @@ body {
 
 img {
   max-width: 100%;
-  margin: 1rem 1rem 0 1rem;
+  padding: 1rem 1rem 0 1rem;
   display: inline-block;
   border-radius: 10px;
 }
